Reach the GPU from the compiled class too, by embedding am.ik.gpu
--gpu now reaches -o Prog.class, the same one member as on the interpreter, and
the emitted class is still standalone: java Prog is the whole command. What made
that a question is that the binding is not a helper. --simd and --blas each embed
ONE flat template class, hand-mirrored from its interpreter twin; am.ik.gpu is
~1700 lines across four classes plus a PTX resource, and .kb/template-class-
embedding.md's demerit (b) forbids a template a second class file.

So the mechanism is generalized rather than the library flattened: one base64
blob and one Lookup.defineClass per class file, in any order, since a sibling
reference resolves lazily on the first instruction that uses it; one prefix
rename over every file (am/ik/gpu/ -> RontoLispGpu) which carries the nested
classes without naming them and rewrites the glue template's references in the
same pass, so JvmGpuTemplate can be written against the real library and
type-checked by javac. The compiled backend then runs the very bytes the
interpreter runs -- one probe, one allocator discipline, one status table, one
precision contract -- and there is nothing to keep in sync.

The size objection that made the todo lean the other way is void, measured: six
class files 47.4 KB plus 10.4 KB of PTX, base64 ~78 KB, against the --simd
template's 83 KB that every linalg program under that flag already carries. What
it buys is that the decline-costs-the-device-nothing ordering, the 101-entry
CUresult table and its seventeen sticky statuses, the per-SM sync ceiling and the
chunked critical copies do not fork. Two alternatives are recorded as rejected: a
support jar, which would make -o Prog.class --gpu the only output that is not
standalone; and a template that reaches am.ik.gpu reflectively when the jar
happens to be on the classpath, which is worse than either -- a device declining
is a property of the MACHINE, which the flag reports, while a missing jar is a
pr